[tool.poetry]
name = "graiax-sayamod-nbnhhsh"
version = "0.1.2"
description = "[Saya模块]能不能好好说话——缩写查询"
authors = ["Eric <erictianc@outlook.com>"]
license = "AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.8"
graia-application-mirai = "^0.16.1"
graia-saya = "^0.0.4"
aiosonic = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
